--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      
       - uses: actions/setup-node@v2
         with:
           node-version: '18'
-      - run: npm install
-      - run: npm run build
+          
+      - name: Install dependencies
+        run: npm install
+        
+      - name: Build CSS
+        run: npm run build:css
+        
+      - name: Build 11ty
+        run: npm run build
+        
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
