--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy --serve",
-    "build": "eleventy"
+    "start": "npm-run-all --parallel watch:*",
+    "watch:11ty": "eleventy --serve",
+    "watch:css": "tailwindcss -i src/css/tailwind.css -o _site/css/styles.css --watch",
+    "build": "npm-run-all build:*",
+    "build:css": "tailwindcss -i src/css/tailwind.css -o _site/css/styles.css",
+    "build:11ty": "eleventy"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +16,9 @@
   "description": "",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.4.17"
   }
 }
